2002-11-18    <smulloni@smullbola.smullyan.org>

	* test/formlib/htdocs/: created first *very* simple test.

	* pylibs/formlib/views.py (ViewableForm.getView): show descriptions.

	* pylibs/containers/fieldcontainer.py (FieldContainer.__setitem__): fixed
	typo.

	* pylibs/containers/set.py: adding brain-dead set implementation (luckily 
	sets will be part of Python 2.3).

	* pylibs/formlib/views.py, pylibs/formlib/form.py: now reached a point
	where it is possible to test it with simple forms.  Added description field
	to all fields.

2002-11-14    <smulloni@smullbola.smullyan.org>

	* pylibs/formlib/form.py: the field classes are now somewhat reasonable;
	Form isn't there yet.

2002-11-13    <smulloni@smullbola.smullyan.org>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.extract_args):
	now use argextract.

	* pylibs/formlib/form.py: start of clean-up, using
	fieldcontainer.py. 

	* pylibs/containers/fieldcontainer.py (FieldContainer): added
	a "storelists" property.

	* pylibs/containers/__init__.py: created a package for containers,
	in anticipation of eventually needing to write more of them.

	* pylibs/containers/fieldcontainer.py: adding a hybrid list/dict
	container that I needed for formlib.

2002-11-12    <smulloni@smullbola.smullyan.org>

	* docs/tutorial/src: (many files) various changes, still very rough
	and incomplete.

	* pylibs/argextract.py: Since this code looks like it might get used
	outside of CONNECTION, I'm moving it to its own module.

2002-11-10    <smulloni@smullbola.smullyan.org>

	* SkunkWeb/Services/rewrite.py: Moved rewrite hook by default to
	HaveConnection, which occurs before scoping takes place. Added
	Configuration variable, rewriteBeforeScope, to control this (if it
	has a false value, rewrite will take place in PreHandleConnection,
	as before, but it defaults to 1).  I can see arguments for both
	places, but in my case I found it troubling that auth and rewrite